--- a/app/src/main/res/layout/activity_probkich.xml
+++ b/app/src/main/res/layout/activity_probkich.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".probkich">
+    tools:context=".screens.probkich">
 
     <TextView
         android:id="@+id/textView2"
